--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,151 +1,12 @@
 <div class="container">    
     <div class="row">
-      <div class="col-sm-4" *ngFor="let i of x">
+      <div class="col-sm-4" *ngFor="let m of movies; let i=index">
         <div class="card">
-          <div class="card-header" style="text-align: center;"> MOVIE {{i}}</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/{{i+2}}.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
+          <div class="card-header" style="text-align: center;"><h4> {{m.movieName}} </h4></div>
+          <div class="card-body"><img src="/assets/{{i+2}}.jpg" class="img-responsive" style="width:100%" alt="Image" (click)="nextPage(m.movieId,i)"></div>
+          <div class="card-footer"></div>
         </div>
       </div>
     </div>
   </div>
-     <!-- <div class="col-sm-4" style="margin: 10px 10px 10px 10px;"> 
-        <div class="card">
-          <div class="card-heading" style="text-align: center;"> MOVIE 2</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/devdas.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
-        </div>
-      </div>
-      <div class="col-sm-4" style="margin: 10px 10px 10px 10px;"> 
-        <div class="card">
-          <div class="card-heading" style="text-align: center;"> MOVIE 3</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/joker.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
-        </div>
-      </div>
-
-      <div class="col-sm-4" style="margin: 10px 10px 10px 10px;"> 
-        <div class="card">
-          <div class="card-heading" style="text-align: center;"> MOVIE 4</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/spider.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
-        </div>
-      </div>-->
     
-  
- <!-- <div class="container">    
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="card">
-          <div class="card-heading" style="text-align: center;">MOVIE 5</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/spider.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
-        </div>
-      </div>
-      <div class="col-sm-4"> 
-        <div class="card">
-          <div class="card-heading" style="text-align: center;">MOVIE 6</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/shrooms.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
-        </div>
-      </div>
-      <div class="col-sm-4"> 
-        <div class="card">
-          <div class="card-heading" style="text-align: center;">MOVIE 7</div>
-          <div class="card-body"><a [routerLink]="['/detail']"><img src="/assets/venom.jpg" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          <div class="card-footer"><table class="table table-bordered">
-            <th>
-              <tr>dir</tr>
-              <tr>prod</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </th>
-            <td>
-              <tr>director</tr>
-              <tr>producer</tr>
-              <tr>writer</tr>
-              <tr>cast</tr>
-            </td>
-          </table></div>
-        </div>
-      </div>
-    </div>
-  </div><br>-->
