--- a/src/app/bookticket/bookticket.component.html
+++ b/src/app/bookticket/bookticket.component.html
@@ -4,7 +4,7 @@
 
         <div class="card-body">     
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col">
                     <div class="card">
                         <div class="card-header"><h6>PERSONAL DETAILS</h6></div>
                         <div class="card-body">
@@ -15,9 +15,9 @@
                             <th>mobile no</th>
                         </tr>
                         <tr>
-                            <td>name</td>
-                            <td>email</td>
-                            <td>xxxxxxxxxx</td>
+                            <td>{{user.userName}}</td>
+                            <td>{{user.emailId}}</td>
+                            <td>{{user.mobileNo}}</td>
                         </tr>
                     </table>
                     </div>
@@ -36,8 +36,8 @@
                             <th>screen</th>
                         </tr>
                         <tr>
-                            <td>movie name</td>
-                            <td>language</td>
+                            <td>{{movie.movieName}}</td>
+                            <td>{{movie.language}}</td>
                             <td>show date</td>
                             <td>show time</td>
                             <td>screen</td>
