--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -8,7 +8,7 @@
             </iframe>
             <table class="table table-stripped">
                 <th>
-                  <tr>dirextor</tr>
+                  <tr>director</tr>
                   <tr>producer</tr>
                   <tr>writer</tr>
                   <tr>cast</tr>
