--- a/src/app/listmovie/listmovie.component.html
+++ b/src/app/listmovie/listmovie.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 20px;">All</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;">Sort by date</button>&NonBreakingSpace;
     <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;" (click)="transmit()">Add show</button>&NonBreakingSpace;
@@ -62,7 +62,7 @@
                                         </ul>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger" (click)="deleteShow()">delete</button>
+                                        <button class="btn btn-info" (click)="updateShow()">update</button>
                                     </td>
                                 </tr>
                             </table>
