--- a/src/app/show-screen/show-screen.component.html
+++ b/src/app/show-screen/show-screen.component.html
@@ -59,7 +59,7 @@
     
                         <tr>
                             <div class="form-group">
-                            <input type="date" name="showdate" placeholder="date" [(ngModel)]=show.showDate>
+                            <input type="date" name="showdate" placeholder="date" min={{date}} [(ngModel)]=show.showDate>
                             </div>
                         </tr>
     
