--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <ul class="navbar-nav">
        <li class="nav-item"><a  class="nav-link" [routerLink]="['home']"><h6><i class="fas fa-home"></i></h6></a></li> 
        <li class="nav-item"><a  class="nav-link" [routerLink]="['signup']"><h6>SIGN UP</h6></a></li>
-      <li class="nav-item"><a  class="nav-link" [routerLink]="['login']"><h6> LOGIN</h6></a></li>
+     <!-- <li class="nav-item"><a  class="nav-link" [routerLink]="['login']"><h6> LOGIN</h6></a></li>-->
       <li class="nav-item"><a  class="nav-link" [routerLink]="['bookingList']"><h6> BOOKING DETAILS</h6></a></li>
       <li class="nav-item" style="position: absolute; right: 10px;"><a  class="nav-link" [routerLink]="['/admin']"><h6><i class="fas fa-cog"></i></h6></a></li>
  </ul>
