--- a/src/app/bookinglist/bookinglist.component.html
+++ b/src/app/bookinglist/bookinglist.component.html
@@ -1,30 +1,33 @@
 <div class="container">
-    <ul class="list-group" style="list-style-type:none;" *ngFor="let i of x">
+    <form (ngSubmit)="userIdVal()">
+        <input type="email" name="emailId" placeholder="email id" [(ngModel)]=userId>&NonBreakingSpace;&NonBreakingSpace;
+        <button class="btn btn-danger">get your booking details</button><hr>
+        </form>
+    <ul class="list-group" style="list-style-type:none;" *ngFor="let b of bookings;let i=index">
         <li>
         <div class="card">
             <div class="card-heading" style="padding-left: 20px; padding-top: 20px; background-color: goldenrod;">
-                booking id {{i}} <span class="badge"><h6>{{str1}}</h6> </span><br>
+                {{b.bookingId}}/ <span class="badge"><h6>{{b.statusBooking}}</h6> </span><br>
             </div>
 
             <div class="card-body" style="background-color: rgb(255, 216, 148);">
-                list 
-                show time<br>
+                {{shows[i].showDate}}/{{shows[i].showTime}}<br>
                 movie name<br>
                 
                 <img src="/assets/qr.jpg" class="img-responsive" style="width:8%; top: 75px; right: 10px; position: absolute;" alt="Image">
                 seat details:<br>
                 <table class="table table-stripped" style="width: 600px;">
                     <th>
-                      <tr>seat no [ {{str}} ]</tr>
+                      <tr>seat no</tr>
                     </th>
-                    <td  *ngFor="let j of y">
-                      <tr>{{j}} </tr>
+                    <td  *ngFor="let s of seats[i]">
+                      <tr>{{s.seatNo}}/{{s.statusSeat}} </tr>
                     </td>
                   </table>
             </div>
 
             <div class="card-footer" style="background-color: goldenrod;">
-                date <span class="badge">{{i}} valid for cancelation or not valid for cancelation </span>
+                {{date}} <span class="badge"> {{validVal}} </span>
                 <button class="btn btn-danger" (click)="changeStat()">vacant seats</button>&NonBreakingSpace;
                 <button class="btn btn-danger" (click)="transmit()">cancel booking</button>
             </div>
