--- a/src/app/bookticket/bookticket.component.html
+++ b/src/app/bookticket/bookticket.component.html
@@ -38,9 +38,9 @@
                         <tr>
                             <td>{{movie.movieName}}</td>
                             <td>{{movie.language}}</td>
-                            <td>show date</td>
-                            <td>show time</td>
-                            <td>screen</td>
+                            <td>{{show.showDate}}</td>
+                            <td>{{show.showTime}}</td>
+                            <td>{{show.screen}}</td>
                         </tr>
                     </table>
                     </div>
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card">
-                   <div class="card-header"> <h6>SEAT NO.s : A/B/C/Q/R</h6>
+                   <div class="card-header"> <h6>SEAT NO.s : <span *ngFor="let seat of finalSeats">({{seat.seatNo}})</span></h6>
                     <button class="btn btn-info" (click)="transmit()" >confirm and pay</button>
                 </div>
             </div>
