--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">    
     <div class="row">
-      <div class="col-sm-4" *ngFor="let m of movies; let i=index">
+      <div class="col-sm-4" *ngFor="let m of movies; let i=index" style="padding: 20px;">
         <div class="card">
           <div class="card-header" style="text-align: center;"><h4> {{m.movieName}} </h4></div>
           <div class="card-body"><img src="/assets/{{i+2}}.jpg" class="img-responsive" style="width:100%" alt="Image" (click)="nextPage(m.movieId,i)"></div>
