--- a/src/app/seats/seats.component.html
+++ b/src/app/seats/seats.component.html
@@ -1,3 +1,53 @@
-<p>seats works!</p>
-<a  class="nav-link" [routerLink]="['/book']"><h6>book ticket</h6></a>
-<a  class="nav-link" [routerLink]="['/home']"><h6>MOVIES</h6></a>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">show date and show time</div>
+                <div class="card-body">
+            <table class="table table-bordered">
+                <tr><th>show dates</th>
+                    <th>Show time</th></tr>
+                <tr *ngFor="let s of shows">
+                    <td style="text-align: center;">{{s.showDate}}</td>
+                    <td style="text-align: center;">{{s.showTime}}</td>
+                    <td><button class="btn btn-warning" (click)="showSave(s.showId,s.showDate,s.showTime,s.screen,s.statusShow)"><i class="fas fa-check"></i></button></td>
+                </tr>
+            </table>
+            </div>
+            <div class="card-footer"></div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">seat</div>
+                <div class="card-body" *ngFor="let seat of seats">
+                    <div class="row">
+                        <div class="col"><div class="card" style="height: 40px;">{{seat.seatNo}}/{{seat.statusSeat}} <button class="btn btn-warning" style="width: 40px; top: inherit; right: 0px;position: absolute;" (click)="addBookingIdToSeat(seat.seatId,seat.seatNo,seat.statusSeat)"><i class="fas fa-check"></i></button></div></div>
+                    </div>
+                </div>
+                <div class="card-footer"></div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">book</div>
+                <div class="card-body"> 
+                    <table class="table table-bordered">
+                        <th>
+                            <tr>show date</tr><hr>
+                            <tr>show time</tr><hr>
+                            <tr>seats</tr><hr>
+                        </th>
+                        <td>
+                            <tr>{{show.showDate}}</tr><hr>
+                            <tr>{{show.showTime}}</tr><hr>
+                            <tr *ngFor="let seat of finalSeats">{{seat.seatNo}}<hr></tr>
+                        </td>
+                    </table>
+                </div>
+                <div class="card-footer"><button class="btn btn-info" (click)="nextpage()">next</button></div>
+            </div>
+        </div>
+    </div>
+</div>
