--- a/src/app/listmovie/listmovie.component.html
+++ b/src/app/listmovie/listmovie.component.html
@@ -1,13 +1,12 @@
 <div class="container-fluid">
-    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 20px;">All</button>&NonBreakingSpace;
-    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;">Sort by date</button>&NonBreakingSpace;
-    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;" (click)="transmit()">Add show</button>&NonBreakingSpace;
-    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 310px;" (click)="transmit1()">Add movie</button>&NonBreakingSpace;
-    <form>
-        <input type="text" placeholder=" movie name">&NonBreakingSpace;&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 20px;" (click)="all()">All</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 75px;" (click)="transmit()">Add show</button>&NonBreakingSpace;
+    <button class="btn btn-dark" style="position: absolute; top: inherit; right: 200px;" (click)="transmit1()">Add movie</button>&NonBreakingSpace;
+    <form (ngSubmit)="searchByMovie()">
+        <input type="text" name="movieName" placeholder=" movie name" [(ngModel)]=movieName>&NonBreakingSpace;&NonBreakingSpace;
         <button type="submit" class="btn btn-dark">Searh</button><br><br>
     </form>
-    <div class="row" *ngFor="let m of mov; let i=index" style="display: contents;">
+    <div class="row" *ngFor="let m of mov; let i=index">
         <div class="col">
             
             <div class="card">
@@ -20,9 +19,8 @@
                           <th>movie name</th>
                           <th>movie type</th>
                           <th>language</th>
-                          <th>director</th>
+                          <th>director-producer</th>
                           <th>cast</th>
-                          <th>producer</th>
                           <th>show time and show date</th>
                         </tr>
                         <tr>
@@ -30,9 +28,8 @@
                             <td>{{m.movieName}}</td>
                             <td>{{m.types}}</td>
                             <td>{{m.language}}</td>
-                            <td>{{des[i].director}}</td>
+                            <td>{{des[i].director}}<br>{{des[i].producer}}</td>
                             <td>{{des[i].actor}},<br>{{des[i].actress}}</td>
-                            <td>{{des[i].producer}}</td>
                             <td>
                             <table class="table table-bordered">
                                 <tr>
@@ -62,7 +59,7 @@
                                         </ul>
                                     </td>
                                     <td>
-                                        <button class="btn btn-info" (click)="updateShow()">update</button>
+                                        <button class="btn btn-info" (click)="updateShow(s,m.movieId)">update</button>
                                     </td>
                                 </tr>
                             </table>
@@ -72,8 +69,8 @@
 
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-danger" (click)="deleteMovie(des[i].descriptionId,m.movieId)">delete</button>&NonBreakingSpace;&NonBreakingSpace;
-                <button class="btn btn-info">update</button>
+                   <!-- <button class="btn btn-danger" (click)="deleteMovie(des[i].descriptionId,m.movieId)">delete</button>&NonBreakingSpace;&NonBreakingSpace;-->
+                <!--<button class="btn btn-info">update</button>-->
                 </div>
                 
             </div><hr>
