--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <div class="jumbotron">
-  <div class="container text-center" style="color: rgb(226, 187, 12);">
-    <h1>BOX OFFICE</h1>      
-    <p>The Movie Booking Application</p>
+  <div class="container text-center" style="color: rgb(226, 187, 12); ">
+    <h1 style="font-family: fantasy;">BOX OFFICE</h1>      
+    <p style="font-family: cursive;">Gift one ticket to yourself</p>
   </div>
 </div>
 <div class="body">
