--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -10,7 +10,7 @@
                 <th>
                   <tr>director</tr>
                   <tr>producer</tr>
-                  <tr>writer</tr>
+                  <tr>featuring</tr>
                   <tr>cast</tr>
                 </th>
                 <td>
