--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,6 @@
   }
 
   .body{
-    background-image: url("/assets/6.jpg");
+    background-image: url("/assets/black.jpg");
     background-size: contain;
   }
