--- a/src/app/bookticket/bookticket.component.html
+++ b/src/app/bookticket/bookticket.component.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card">
-                   <div class="card-header"> <h6>SEAT NO.s : <span *ngFor="let seat of finalSeats">({{seat.seatNo}})</span></h6>
+                   <div class="card-header"> <h6>SEAT NO.s : <span *ngFor="let seat of finalSeats">({{seat.seatNo}})</span>= Rs{{price}}</h6>
                     <button class="btn btn-info" (click)="transmit()" >confirm and pay</button>
                 </div>
             </div>
