--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
       <div class="col-sm-4" *ngFor="let m of movies; let i=index" style="padding: 20px;">
         <div class="card">
           <div class="card-header" style="text-align: center;"><h4> {{m.movieName}} </h4></div>
-          <div class="card-body"><img src="/assets/{{i+2}}.jpg" class="img-responsive" style="width:100%" alt="Image" (click)="nextPage(m.movieId,i)"></div>
+          <div class="card-body"><img src="/assets/{{i+1}}.gif" class="img-responsive" style="width:100%; height: 250px;" alt="Image" (click)="nextPage(m.movieId,i)"></div>
           <div class="card-footer"></div>
         </div>
       </div>
